# mosaic-crochet-editor

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  TODO.md  Trunk.toml  flake.nix  main.js  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml  test.yml
core/: Cargo.toml
core/src/: common.rs  export.rs  lib.rs  pattern.rs  tools.rs  walk.rs
logic/: .gitignore  package.json  stryker.config.mjs  tsconfig.json  vitest.config.ts
logic/src/: clipboard.ts  dev.ts  paint.ts  pattern.ts  selection.ts  storage.ts  store.ts  symmetry.ts  types.ts  vite-env.d.ts
logic/tests/: _helpers.ts  clipboard.test.ts  interactions.test.ts  paint.test.ts  pattern.test.ts  properties.test.ts  selection.test.ts  storage.test.ts  store.test.ts  symmetry-selection.test.ts  types.test.ts
src/: common.rs  pattern.rs
wasm/: Cargo.toml  package.json
wasm/src/: lib.rs
web/: .gitignore  Cargo.toml  index.html  package.json  playwright.config.ts  stryker.config.mjs  style.css  tsconfig.json  vite.config.ts
web/e2e/: _helpers.ts  clipboard.spec.ts  interactions.spec.ts  modifiers.spec.ts  paint.spec.ts  persistence.spec.ts  rotation.spec.ts  selection.spec.ts  smoke.spec.ts  symmetry-and-edit.spec.ts  tools.spec.ts  wand-modifiers.spec.ts
web/src/: dom.ts  gesture.ts  history.ts  lib.rs  main.ts  pattern.ts  render.ts  selection.ts  storage-io.ts  storage.ts  store.ts  style.css  symmetry.ts  types.ts  ui.ts  walk.rs
web/tests/: _helpers.ts  clipboard.test.ts  history.test.ts  interactions.test.ts  paint.test.ts  pattern.test.ts  (+7 more)
